--- a/src/main/resources/templates/library.html
+++ b/src/main/resources/templates/library.html
@@ -1,3 +1,8 @@
+<!--
+IIS - projekt 2021
+Zadani: Knihovna
+Autori: Ladislav Dokoupil <xdokou14>
+  -->
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
